Use Cleaner to free digest native context
Signed-off-by: Alon Shalev Housfater <alonsh@ca.ibm.com>